Fixed bug #27268 (Bad references accentuated by clone).